# bob

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  bob.py  importcorpus.py  main.py  markovbot.py  setup.sh  tokenizer.py
include/: bob.h
include/bob/: Bot.h  MarkovBot.h  MarkovChain.h  MarkovChainBuffer.h
src/: main.cpp
src/bob/: Bot.cpp  MarkovBot.cpp  MarkovChain.cpp
tex/: ref.bib  report.tex
